@@ -10,6 +10,8 @@
 	
 	Bug Fixes
 		* NullPointerException check on sensorManager 
+		* Continuous playback in RokonMusic is fixed
+		* Fixed loading screen problems
 
 1.1.0 - 29/12/2009
 	Overview
